plugins {
    // Non-remapping Loom. Minecraft 26.1+ is unobfuscated, so this is NOT the
    // legacy "fabric-loom" id (which still means remapping mode).
    id "net.fabricmc.fabric-loom" version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // Non-remapping Loom drops modImplementation/modCompileOnly; mods are plain
    // implementation dependencies because there is nothing left to remap.

    // The published fabric-gui-imgui jar does not bundle imgui-java, so the
    // binding and the platform natives have to be shipped alongside it or the
    // mod dies at runtime with an UnsatisfiedLinkError.
    implementation "cn.enaium:fabric-gui-imgui:${project.imgui_version}"
    include "cn.enaium:fabric-gui-imgui:${project.imgui_version}"

    include "io.github.spair:imgui-java-binding:${project.imgui_java_version}"
    include("io.github.spair:imgui-java-lwjgl3:${project.imgui_java_version}") {
        // Minecraft already provides LWJGL; letting imgui-java drag its own onto
        // the classpath causes version conflicts.
        exclude group: "org.lwjgl"
    }
    include "io.github.spair:imgui-java-natives-linux:${project.imgui_java_version}"
    include "io.github.spair:imgui-java-natives-windows:${project.imgui_java_version}"
    include "io.github.spair:imgui-java-natives-macos:${project.imgui_java_version}"

    implementation "org.mozilla:rhino:${project.rhino_version}"
    include "org.mozilla:rhino:${project.rhino_version}"

    testImplementation platform("org.junit:junit-bom:5.11.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
    def props = ["version": project.version]
    inputs.properties props

    filesMatching("fabric.mod.json") {
        expand props
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.encoding = "UTF-8"
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
}
